hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_open_empty_string.php
<?php
try{
    $db = new SQLite3('');
} catch(Exception $e) {
    echo $e->getMessage().PHP_EOL;
}
echo "Done\n";
?>